# hegemony-secret-plugins

./: .commitlintrc.yaml  LICENSING.md  README.md  REUSE.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
plugins/secret_1password/: README.md  pyproject.toml
plugins/secret_1password/src/hegemony_secret_1password/: __init__.py  connect_client.py  service_account_client.py
plugins/secret_vault/: README.md  pyproject.toml
plugins/secret_vault/src/hegemony_secret_vault/: __init__.py  vault_client.py
scripts/: package_paths.py  set_version.py  smoke_install_wheels.py  verify_release_version.py
tests/: test_1password_backend.py  test_sdk_contract.py  test_vault_backend.py
