# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-secret-1password"
version = "0.1.0"
description = "1Password secret backend plugin for Hegemony"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hegemony-secret-sdk==0.1.0",
    "onepasswordconnectsdk>=2.1,<3",
    "onepassword-sdk>=0.4,<1",
]

[project.entry-points."hegemony.secret_backends"]
onepassword = "hegemony_secret_1password:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_secret_1password"
module-root = "src"
