# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-secret-vault"
version = "0.1.0"
description = "HashiCorp Vault secret backend plugin for Hegemony"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hegemony-secret-sdk==0.1.0",
    "hvac>=2.3.0,<3.0",
]

[project.entry-points."hegemony.secret_backends"]
vault = "hegemony_secret_vault:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_secret_vault"
module-root = "src"
